--- a/index.html
+++ b/index.html
@@ -2,20 +2,22 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta description="Proyecto de Pulse del Curso de Web Design de la plataforma Platzi 2015"/>
+  <meta name="description" content="Proyecto de Pulse del Curso de Web Design de la plataforma Platzi 2015"/>
   <title>Puls 2015: Comunidad de personas atractivas y sexies.</title>
+  <link rel="stylesheet" href="http://necolas.github.com/normalize.css/3.0.2/normalize.css" />
+  
 </head>
 <body>
   
   <header>
     <figure id="logo">
-        <img src="img/logo.png" alt="Logo del proyecto" />
+        <img src="https://raw.githubusercontent.com/freddier/Puls2014-America/master/logo.png" alt="" />
     </figure>
     <h1>
       Pulse 2015 : Comunidad de personas atractivas y sexies.
     </h1>
     <figure id="avatar">
-        <img src="img/avatar.jpg" alt="Mi avatar" />
+        <img src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-xpf1/v/t1.0-1/p160x160/11009121_10204914337954983_1678005726714579190_n.jpg?oh=2fbbb417f0ec763b8bb4f26fb6a9af6a&oe=55731663&__gda__=1434410267_046033a0c5ae0c6c43a2bd7c4cf18297" alt="" />
     </figure>
   </header>
   <nav>
@@ -32,7 +34,7 @@
   <section id="contenido">
     <article class="item">
       <figure class="imagen_item">
-        <img src="img/gato.jpg" alt="gaton" />
+        <img src="http://lorempixel.com/192/256/cats" alt="" />
       </figure>  
       <h2 class="titulo_item">
       <a href="#"> Título del artículo </a> 
@@ -45,16 +47,157 @@
           axlwolf
         </a>
         <span class="fecha_item">hace <strong> 10 </strong> minutos</span>
-       
-        <a href="#" class="comentarios_item">
-          69
-        </a>
-        <a href="#" class="guardar_item"></a>
       </div>
       <div class="votacion">
-        <a href="#" class="up"></a>
+        <a href="#" class="up">U</a>
         720
-        <a href="#" class="down"></a>
+        <a href="#" class="down">D</a>
+        <a href="#" class="comentarios_item">3</a>
+        <a href="#" class="guardar_item">X</a>
+      </div>
+    </article>
+     <article class="item">
+      <figure class="imagen_item">
+        <img src="http://lorempixel.com/192/256/cats" alt="" />
+      </figure>  
+      <h2 class="titulo_item">
+      <a href="#"> Título del artículo </a> 
+      </h2>
+      <div class="autor_item">
+        por <a href="#">Axel Lanuza</a>
+      </div>
+      <div class="datos_item">
+         <a href="#" class="tag_item">
+          axlwolf
+        </a>
+        <span class="fecha_item">hace <strong> 10 </strong> minutos</span>
+      </div>
+      <div class="votacion">
+        <a href="#" class="up">U</a>
+        720
+        <a href="#" class="down">D</a>
+        <a href="#" class="comentarios_item">3</a>
+        <a href="#" class="guardar_item">X</a>
+      </div>
+    </article>
+     <article class="item">
+      <figure class="imagen_item">
+        <img src="http://lorempixel.com/192/256/cats" alt="" />
+      </figure>  
+      <h2 class="titulo_item">
+      <a href="#"> Título del artículo </a> 
+      </h2>
+      <div class="autor_item">
+        por <a href="#">Axel Lanuza</a>
+      </div>
+      <div class="datos_item">
+         <a href="#" class="tag_item">
+          axlwolf
+        </a>
+        <span class="fecha_item">hace <strong> 10 </strong> minutos</span>
+      </div>
+      <div class="votacion">
+        <a href="#" class="up">U</a>
+        720
+        <a href="#" class="down">D</a>
+        <a href="#" class="comentarios_item">3</a>
+        <a href="#" class="guardar_item">X</a>
+      </div>
+    </article>
+     <article class="item">
+      <figure class="imagen_item">
+        <img src="http://lorempixel.com/192/256/cats" alt="" />
+      </figure>  
+      <h2 class="titulo_item">
+      <a href="#"> Título del artículo </a> 
+      </h2>
+      <div class="autor_item">
+        por <a href="#">Axel Lanuza</a>
+      </div>
+      <div class="datos_item">
+         <a href="#" class="tag_item">
+          axlwolf
+        </a>
+        <span class="fecha_item">hace <strong> 10 </strong> minutos</span>
+      </div>
+      <div class="votacion">
+        <a href="#" class="up">U</a>
+        720
+        <a href="#" class="down">D</a>
+        <a href="#" class="comentarios_item">3</a>
+        <a href="#" class="guardar_item">X</a>
+      </div>
+    </article>
+     <article class="item">
+      <figure class="imagen_item">
+        <img src="http://lorempixel.com/192/256/cats" alt="" />
+      </figure>  
+      <h2 class="titulo_item">
+      <a href="#"> Título del artículo </a> 
+      </h2>
+      <div class="autor_item">
+        por <a href="#">Axel Lanuza</a>
+      </div>
+      <div class="datos_item">
+         <a href="#" class="tag_item">
+          axlwolf
+        </a>
+        <span class="fecha_item">hace <strong> 10 </strong> minutos</span>
+      </div>
+      <div class="votacion">
+        <a href="#" class="up">U</a>
+        720
+        <a href="#" class="down">D</a>
+        <a href="#" class="comentarios_item">3</a>
+        <a href="#" class="guardar_item">X</a>
+      </div>
+    </article>
+     <article class="item">
+      <figure class="imagen_item">
+        <img src="http://lorempixel.com/192/256/cats" alt="" />
+      </figure>  
+      <h2 class="titulo_item">
+      <a href="#"> Título del artículo </a> 
+      </h2>
+      <div class="autor_item">
+        por <a href="#">Axel Lanuza</a>
+      </div>
+      <div class="datos_item">
+         <a href="#" class="tag_item">
+          axlwolf
+        </a>
+        <span class="fecha_item">hace <strong> 10 </strong> minutos</span>
+      </div>
+      <div class="votacion">
+        <a href="#" class="up">U</a>
+        720
+        <a href="#" class="down">D</a>
+        <a href="#" class="comentarios_item">3</a>
+        <a href="#" class="guardar_item">X</a>
+      </div>
+    </article>
+     <article class="item">
+      <figure class="imagen_item">
+        <img src="http://lorempixel.com/192/256/cats" alt="" />
+      </figure>  
+      <h2 class="titulo_item">
+      <a href="#"> Título del artículo </a> 
+      </h2>
+      <div class="autor_item">
+        por <a href="#">Axel Lanuza</a>
+      </div>
+      <div class="datos_item">
+         <a href="#" class="tag_item">
+          axlwolf
+        </a>
+        <span class="fecha_item">hace <strong> 10 </strong> minutos</span>
+      </div>
+      <div class="votacion">
+        <a href="#" class="up">U</a>
+        720
+        <a href="#" class="down">D</a>
+        <a href="#" class="comentarios_item">3</a>
+        <a href="#" class="guardar_item">X</a>
       </div>
     </article>
   </section>
