Modificaciones a la estructura del index

--- a/index.html
+++ b/index.html
@@ -4,20 +4,21 @@
   <meta charset="UTF-8" />
   <meta name="description" content="Proyecto de Pulse del Curso de Web Design de la plataforma Platzi 2015"/>
   <title>Puls 2015: Comunidad de personas atractivas y sexies.</title>
-  <link rel="stylesheet" href="http://necolas.github.com/normalize.css/3.0.2/normalize.css" />
+  <link rel="stylesheet" href="css/normalize.css" />
+  <link rel="stylesheet" href="css/estilos.css" />
   
 </head>
 <body>
   
   <header>
     <figure id="logo">
-        <img src="https://raw.githubusercontent.com/freddier/Puls2014-America/master/logo.png" alt="" />
+        <img src="img/logo.png" alt="" />
     </figure>
     <h1>
       Pulse 2015 : Comunidad de personas atractivas y sexies.
     </h1>
     <figure id="avatar">
-        <img src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-xpf1/v/t1.0-1/p160x160/11009121_10204914337954983_1678005726714579190_n.jpg?oh=2fbbb417f0ec763b8bb4f26fb6a9af6a&oe=55731663&__gda__=1434410267_046033a0c5ae0c6c43a2bd7c4cf18297" alt="" />
+        <img src="img/avatar.jpg" alt="" />
     </figure>
   </header>
   <nav>
@@ -34,7 +35,7 @@
   <section id="contenido">
     <article class="item">
       <figure class="imagen_item">
-        <img src="http://lorempixel.com/192/256/cats" alt="" />
+        <img src="img/gato.jpg" alt="" />
       </figure>  
       <h2 class="titulo_item">
       <a href="#"> Título del artículo </a> 
