--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1"/>
   <meta name="description" content="Proyecto de Pulse del Curso de Web Design de la plataforma Platzi 2015"/>
   <title>Puls 2015: Comunidad de personas atractivas y sexies.</title>
   <link rel="stylesheet" href="css/normalize.css" />
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:800italic,400,600' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/estilos.css" />
   
 </head>
@@ -23,15 +25,24 @@
   </header>
   <nav>
       <ul>
-        <li><a href="#">Pythob</a></li>
+        <li><a href="#">Python</a></li>
         <li><a href="#">HTML5</a></li>
         <li><a href="#">Javascript</a></li>
         <li><a href="#">CSS3</a></li>
         <li><a href="#">Django</a></li>
-        <li id="publicar_nav"><a href="#">Publicar</a></li>
+        <li id="publicar_nav"><a href="#"><i class="icon-pluma"></i> Publicar</a></li>
       </ul>
   </nav>
-  
+
+  <aside>
+      <video width="350" height="240" controls>
+          <source src="video/lecturas.m4v" type="video/mp4" />
+          <source src="video/lecturas.ogg" type="video/ogg" />
+          Tu navegador no soporta el tag de video. Actualiza a la versión más reciente de
+          Chrome
+      </video>
+  </aside>
+
   <section id="contenido">
     <article class="item">
       <figure class="imagen_item">
@@ -44,17 +55,17 @@
         por <a href="#">Axel Lanuza</a>
       </div>
       <div class="datos_item">
-         <a href="#" class="tag_item">
+        <a href="#" class="tag_item">
           axlwolf
         </a>
         <span class="fecha_item">hace <strong> 10 </strong> minutos</span>
       </div>
       <div class="votacion">
-        <a href="#" class="up">U</a>
+        <a href="#" class="up"><i class="icon-arriba"></i></a>
         720
-        <a href="#" class="down">D</a>
+        <a href="#" class="down icon-abajo"></a>
         <a href="#" class="comentarios_item">3</a>
-        <a href="#" class="guardar_item">X</a>
+        <a href="#" class="guardar_item"><i class="icon-extrella"></i></a>
       </div>
     </article>
      <article class="item">
@@ -68,17 +79,17 @@
         por <a href="#">Axel Lanuza</a>
       </div>
       <div class="datos_item">
-         <a href="#" class="tag_item">
+        <a href="#" class="tag_item">
           axlwolf
         </a>
         <span class="fecha_item">hace <strong> 10 </strong> minutos</span>
       </div>
       <div class="votacion">
-        <a href="#" class="up">U</a>
+        <a href="#" class="up"><i class="icon-arriba"></i></a>
         720
-        <a href="#" class="down">D</a>
+        <a href="#" class="down icon-abajo"></a>
         <a href="#" class="comentarios_item">3</a>
-        <a href="#" class="guardar_item">X</a>
+        <a href="#" class="guardar_item"><i class="icon-extrella"></i></a>
       </div>
     </article>
      <article class="item">
@@ -92,17 +103,17 @@
         por <a href="#">Axel Lanuza</a>
       </div>
       <div class="datos_item">
-         <a href="#" class="tag_item">
+        <a href="#" class="tag_item">
           axlwolf
         </a>
         <span class="fecha_item">hace <strong> 10 </strong> minutos</span>
       </div>
       <div class="votacion">
-        <a href="#" class="up">U</a>
+        <a href="#" class="up"><i class="icon-arriba"></i></a>
         720
-        <a href="#" class="down">D</a>
+        <a href="#" class="down icon-abajo"></a>
         <a href="#" class="comentarios_item">3</a>
-        <a href="#" class="guardar_item">X</a>
+        <a href="#" class="guardar_item"><i class="icon-extrella"></i></a>
       </div>
     </article>
      <article class="item">
@@ -116,17 +127,17 @@
         por <a href="#">Axel Lanuza</a>
       </div>
       <div class="datos_item">
-         <a href="#" class="tag_item">
+        <a href="#" class="tag_item">
           axlwolf
         </a>
         <span class="fecha_item">hace <strong> 10 </strong> minutos</span>
       </div>
       <div class="votacion">
-        <a href="#" class="up">U</a>
+        <a href="#" class="up"><i class="icon-arriba"></i></a>
         720
-        <a href="#" class="down">D</a>
+        <a href="#" class="down icon-abajo"></a>
         <a href="#" class="comentarios_item">3</a>
-        <a href="#" class="guardar_item">X</a>
+        <a href="#" class="guardar_item"><i class="icon-extrella"></i></a>
       </div>
     </article>
      <article class="item">
@@ -140,17 +151,17 @@
         por <a href="#">Axel Lanuza</a>
       </div>
       <div class="datos_item">
-         <a href="#" class="tag_item">
+        <a href="#" class="tag_item">
           axlwolf
         </a>
         <span class="fecha_item">hace <strong> 10 </strong> minutos</span>
       </div>
       <div class="votacion">
-        <a href="#" class="up">U</a>
+        <a href="#" class="up"><i class="icon-arriba"></i></a>
         720
-        <a href="#" class="down">D</a>
+        <a href="#" class="down icon-abajo"></a>
         <a href="#" class="comentarios_item">3</a>
-        <a href="#" class="guardar_item">X</a>
+        <a href="#" class="guardar_item"><i class="icon-extrella"></i></a>
       </div>
     </article>
      <article class="item">
@@ -164,17 +175,17 @@
         por <a href="#">Axel Lanuza</a>
       </div>
       <div class="datos_item">
-         <a href="#" class="tag_item">
+        <a href="#" class="tag_item">
           axlwolf
         </a>
         <span class="fecha_item">hace <strong> 10 </strong> minutos</span>
       </div>
       <div class="votacion">
-        <a href="#" class="up">U</a>
+        <a href="#" class="up"><i class="icon-arriba"></i></a>
         720
-        <a href="#" class="down">D</a>
+        <a href="#" class="down icon-abajo"></a>
         <a href="#" class="comentarios_item">3</a>
-        <a href="#" class="guardar_item">X</a>
+        <a href="#" class="guardar_item"><i class="icon-extrella"></i></a>
       </div>
     </article>
      <article class="item">
@@ -188,17 +199,17 @@
         por <a href="#">Axel Lanuza</a>
       </div>
       <div class="datos_item">
-         <a href="#" class="tag_item">
+        <a href="#" class="tag_item">
           axlwolf
         </a>
         <span class="fecha_item">hace <strong> 10 </strong> minutos</span>
       </div>
       <div class="votacion">
-        <a href="#" class="up">U</a>
+        <a href="#" class="up"><i class="icon-arriba"></i></a>
         720
-        <a href="#" class="down">D</a>
+        <a href="#" class="down icon-abajo"></a>
         <a href="#" class="comentarios_item">3</a>
-        <a href="#" class="guardar_item">X</a>
+        <a href="#" class="guardar_item"><i class="icon-extrella"></i></a>
       </div>
     </article>
   </section>
